--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-    "name": "usernet",
-    "version": "0.0.1",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js"
-    },
-    "dependencies": {
-        "express": "~4.0.0",
-        "mongoose": "~3.6.13",
-        "body-parser": "~1.0.1"
-    }
+  "name": "usernet",
+  "version": "0.0.2",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "body-parser": "~1.0.1",
+    "express": "~4.0.0",
+    "express-mongoose-docs": "^0.3.1",
+    "mongoose": "~3.6.13"
+  }
 }
